--- a/styles/main.css
+++ b/styles/main.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero {
-  background-image: url("../img/bank-tree.jpeg");
+  background-image: url("../img/bank-tree.webp");
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -154,6 +154,8 @@ body {
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
+
+
 
 .sign-in-button {
   display: block;
